Prototype sketch of loading a native operation from a library
Create a native_time library that contains a now function, load the function into the value store, and execute it

This is wildly incomplete, as it does not use the NativeOperations mechanism, and the tests are minimal and only go through the happy path
and make interesting filesystem assumptions as well.

But it is the first building step

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,3 +70,8 @@ file(GLOB_RECURSE testsources CONFIGURE_DEPENDS test/*.cpp)
 add_executable(tests ${testsources})
 target_include_directories(tests PUBLIC include ${GTEST_INCLUDE_DIRS})
 target_link_libraries(tests gtest_main core)
+
+file(GLOB_RECURSE native_time_sources CONFIGURE_DEPENDS native/time/src/*.cpp)
+add_library(native_time SHARED ${native_time_sources})
+target_include_directories(native_time PUBLIC include native/time/include)
+target_link_libraries(native_time core)
