Allow native libraries to only exist and be opened from current path/lib/libnative_<name>.so
This has a few obvious drawbacks:
- current path is not always right in general;
- file path format is very UNIX specific

OTOH it allows for an obvious venue and format to install and name native libraries

There should likely be a PATH variable that allows setting one or more places to look for such libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,3 +75,4 @@ file(GLOB_RECURSE native_time_sources CONFIGURE_DEPENDS native/src/time/*.cpp)
 add_library(native_time SHARED ${native_time_sources})
 target_include_directories(native_time PUBLIC include native/include)
 target_link_libraries(native_time core)
+set_target_properties(native_time PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
